fix: sider_sider should set overflow to visible

--- a/components/layout/sider.module.scss
+++ b/components/layout/sider.module.scss
@@ -1,5 +1,5 @@
 .sider {
-  overflow: auto;
+  overflow: visible;
   position: fixed !important;
   top: 0;
   bottom: 0;
